--- a/projects/move-up/index.html
+++ b/projects/move-up/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="it-IT">
-<!-- Mirrored from robertozaccardi.dev/projects/move-up/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 23 May 2022 01:33:45 GMT -->
-<!-- Added by HTTrack -->
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 
 <head>
     <meta charset="utf-8">
@@ -439,6 +438,6 @@
         id='nakedpress-script-js'></script>
     <script type='text/javascript' src='../../wp-includes/js/comment-reply.min.js' id='comment-reply-js'></script>
 </body>
-<!-- Mirrored from robertozaccardi.dev/projects/move-up/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 23 May 2022 01:33:46 GMT -->
+
 
 </html>
