My profile part 3

--- a/tools/index.html
+++ b/tools/index.html
@@ -44,7 +44,7 @@
     <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
     <link rel="canonical" href="index.html" />
     <meta property="og:url" content="https://robertozaccardi.dev/tools/" />
-    <meta property="og:site_name" content="Roberto Zaccardi" />
+    <meta property="og:site_name" content="Joseph Mostacero" />
     <meta property="og:locale" content="it_IT" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Herramientas | Joseph Mostacero" />
@@ -337,7 +337,7 @@
                     <div class="line-menu"></div>
                 </div>
             </div>
-            <div class="header__cta"> <a href="mailto:hello@robertozaccardi.dev" class="button">Contact</a></div>
+            <div class="header__cta"> <a href="mailto:jbmosta28@gmail.com" class="button">Contact</a></div>
         </div>
     </div>
     <div id="swup" class="transition-fade">
@@ -1936,6 +1936,6 @@
         id='nakedpress-script-js'></script>
     <script type='text/javascript' src='../wp-includes/js/comment-reply.min.js' id='comment-reply-js'></script>
 </body>
-<!-- Mirrored from robertozaccardi.dev/tools/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 23 May 2022 01:33:41 GMT -->
+
 
 </html>
