--- a/projects/index.html
+++ b/projects/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="it-IT">
-<!-- Mirrored from robertozaccardi.dev/projects/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 23 May 2022 01:33:20 GMT -->
-<!-- Added by HTTrack -->
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 
 <head>
     <meta charset="utf-8">
